# wayback-restorer

./: .gitignore  README.md  pyproject.toml
config/: recovery.example.toml
docs/: blog-fsck-guest-post-wayback-restorer.md  legal-notes.md  runbook.md
docs/plans/: 2026-02-12-sp-recovery-pipeline.md
sp_recovery/: __init__.py  cli.py  config.py  discovery.py  io_utils.py  pipeline.py  recover.py  reporting.py  rewrite.py  url_utils.py
tests/: test_cli.py  test_config.py  test_discovery.py  test_docs.py  test_io_utils.py  test_pipeline.py  test_recover.py  test_reporting.py  test_rewrite.py
