[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp-recovery"
version = "0.1.0"
description = "Archive-friendly recovery tooling for Something Positive"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
